src/test/success/redeclaring_parameter_as_variable.egern
func abc(a: int): int {
    print(a);
    var a = 4;
    print(a);
    return a;
}

print(abc(3));
