src/test/fail/redeclaring_function_as_variable_fail.egern
func abc(a: int, b: int, c: int): int {
    print(a);
    var x = b;
    return c;
}

var abc = 3;
